maze.randommouse.RandomMouseMaze.scala.error
Erreur de compilation :
RandomMouseMaze:15: error: value prendBiscuit is not a member of Unit
possible cause: maybe a semicolon is missing before `value prendBiscuit'?
  }prendBiscuit()
   ^