maze.randommouse.RandomMouseMaze.scala.code
override def run() {
    // Your code here
  var num:Int=0
  while(estSurBiscuit()==false){
    num=random3()
    if(num==1){
      droite()
    }else if(num==2){
      gauche()
    }else if(estFaceMur()==false){
      avance()
    }
    
  }prendBiscuit()
  
  
  
  
  
}